--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+# Core dependencies
 numpy>=1.20.0
 pandas>=1.3.0
-plotly>=5.3.0
-scikit-learn>=0.24.0
-ta-lib>=0.4.0
 matplotlib>=3.4.0
+plotly>=5.3.0
 networkx>=2.6.0
+scikit-learn>=0.24.0
+yfinance
+
+# Development dependencies
+pytest
+black
+flake8
