--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-# Core dependencies
 numpy>=1.20.0
 pandas>=1.3.0
 matplotlib>=3.4.0
@@ -6,8 +5,18 @@ plotly>=5.3.0
 networkx>=2.6.0
 scikit-learn>=0.24.0
 yfinance
+statsmodels>=0.13.0
+fbprophet>=0.7.1
+tensorflow>=2.8.0
+nbeats-pytorch>=1.3.0
+optuna>=2.10.0
+river>=0.8.0
+scipy>=1.7.0
+shap>=0.40.0
 
 # Development dependencies
 pytest
 black
 flake8
+mypy
+isort
