--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,13 @@ networkx>=2.6.0
 scikit-learn>=0.24.0
 yfinance
 statsmodels>=0.13.0
-fbprophet>=0.7.1
 tensorflow>=2.8.0
 nbeats-pytorch>=1.3.0
 optuna>=2.10.0
 river>=0.8.0
 scipy>=1.7.0
 shap>=0.40.0
+pmdarima>=2.0.0  # For automatic SARIMA parameter selection
 
 # Development dependencies
 pytest
