--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-numpy>=1.20.0
-pandas>=1.3.0
+numpy
 matplotlib>=3.4.0
 plotly>=5.3.0
 networkx>=2.6.0
@@ -7,12 +6,16 @@ scikit-learn>=0.24.0
 yfinance
 statsmodels>=0.13.0
 tensorflow>=2.8.0
-nbeats-pytorch>=1.3.0
 optuna>=2.10.0
 river>=0.8.0
 scipy>=1.7.0
 shap>=0.40.0
-pmdarima>=2.0.0  # For automatic SARIMA parameter selection
+pmdarima>=2.0.0
+PyWavelets>=1.1.1
+nbformat>=4.2.0
+ipywidgets>=7.0.0
+ipykernel>=5.3.0
+jupyter>=1.0.0
 
 # Development dependencies
 pytest
