--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,18 @@ nbformat>=4.2.0
 ipywidgets>=7.0.0
 ipykernel>=5.3.0
 jupyter>=1.0.0
+networkx>=2.6.0
+community>=1.0.0b1
+python-louvain>=0.15
 
 # Development dependencies
-pytest
-black
-flake8
-mypy
-isort
+pytest>=6.0
+pytest-cov>=2.0
+flake8>=3.9.0
+black>=21.5b2
+isort>=5.8.0
+
+# Documentation
+sphinx>=4.0
+sphinx-rtd-theme>=0.5.0
+nbsphinx>=0.8.0
