--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,37 @@
-numpy
-matplotlib>=3.4.0
-plotly>=5.3.0
-networkx>=2.6.0
-scikit-learn>=0.24.0
-yfinance
-statsmodels>=0.13.0
-tensorflow>=2.8.0
-optuna>=2.10.0
-river>=0.8.0
-scipy>=1.7.0
-shap>=0.40.0
-pmdarima>=2.0.0
-PyWavelets>=1.1.1
-nbformat>=4.2.0
-ipywidgets>=7.0.0
-ipykernel>=5.3.0
+numpy>=1.24.0
+matplotlib>=3.8.0
+plotly>=5.18.0
+networkx>=3.2.0
+scikit-learn>=1.3.0
+yfinance>=0.2.32
+statsmodels>=0.14.0
+tensorflow>=2.15.0
+optuna>=3.4.0
+river>=0.20.0
+scipy>=1.11.0
+shap>=0.43.0
+pmdarima>=2.0.3
+PyWavelets>=1.5.0
+nbformat>=5.9.0
+ipywidgets>=8.1.0
+ipykernel>=6.27.0
 jupyter>=1.0.0
-networkx>=2.6.0
+
+# Networking packages
+python-louvain>=0.16
 community>=1.0.0b1
-python-louvain>=0.15
 
 # Development dependencies
-pytest>=6.0
-pytest-cov>=2.0
-flake8>=3.9.0
-black>=21.5b2
-isort>=5.8.0
+pytest>=7.4.0
+pytest-cov>=4.1.0
+flake8>=6.1.0
+black>=23.11.0
+isort>=5.12.0
 
 # Documentation
-sphinx>=4.0
-sphinx-rtd-theme>=0.5.0
-nbsphinx>=0.8.0
+sphinx>=7.2.0
+sphinx-rtd-theme>=1.3.0
+nbsphinx>=0.9.3
+
+# Additional required packages
+pandas>=2.1.0
